[package]
name = "one-billion-row"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.9.4"
metal = "0.27.0"
ptr_hash = { git = "https://github.com/RagnarGrootKoerkamp/PTRHash", rev = "c9ddc78" }
rand = "0.8.5"
seq-macro = "0.3.5"

[dev-dependencies]
criterion = { version = "0.4" }

[lib]
name = "one_billion_row"
path = "src/lib.rs"

[profile.release]
debug = true

[[bench]]
name = "benchmark"
harness = false
